Add 4-Cube Trio graphic, minor text updates.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -156,10 +156,12 @@
   following]{cohn:2012}.}
 
 \fntext{maj3-10}{%
-  ``4-Cube Trio'' was originally devised by Jack Douthett, and is very similar
-  to the ``Power Towers'' graphic in \cite[256]{douthettsteinbach:1998} (which
-  omits the French sixth chords). For more on its history, see
-  \cite[157n15]{cohn:2012}.}
+  This figure is taken from Cohn's book, and has a small, but important,
+  error: the `C' at the 10 o'clock position should be a C\sharp, forming a
+  fully-diminished seventh chord. ``4-Cube Trio'' was originally devised by Jack
+  Douthett, and is very similar to the ``Power Towers'' graphic in
+  \cite[256]{douthettsteinbach:1998} (which omits the French sixth chords). For
+  more on its history, see \cite[157n15]{cohn:2012}.}
 
 \fntext{maj3-11}{%
   This is a central thesis of Cohn's chapter 7 \parentext{see especially
@@ -173,8 +175,8 @@
   century, in which triadic music is the rule and seventh chords the exception.
   In this goal, they generally succeed: many of the unusual harmonic techniques
   in that repertoire \emph{are} well explained by parsimonious voice-leading.
-  Jazz, as a music driven by seventh chords, is a fundamentally different
-  animal, and requires a different approach.}
+  Jazz, as a music driven by seventh chords, is a different sort of animal,
+  and requires a different approach.}
 
 %%% Local Variables: %%%
 %%% mode: latex %%%
