Add a paragraph on Santa's nonatonic system.

--- a/diss.bib
+++ b/diss.bib
@@ -735,6 +735,7 @@ Theory} }
 @article{santa:2003,
   author      = {Santa, Matthew},
   title       = {Nonatonic Progressions in the Music of John Coltrane},
+  shorttitle  = {Nonatonic Progressions in Coltrane},
   journal     = {Annual Review of Jazz Studies},
   volume      = {13},
   pages       = {13--25},
