--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -178,6 +178,16 @@
   Jazz, as a music driven by seventh chords, is a different sort of animal,
   and requires a different approach.}
 
+\fntext{maj3-13}{%
+  Santa omits the fifth of dominant seventh chords, as we have been doing
+  here. The reasons, though, are different: the stated reason is to keep the
+  cardinalities of the chords the same, but he does not mention why he chooses
+  not to use major seventh chords and complete dominant sevenths, for example.
+  Santa notes later that including the fifth involves one of the three missing
+  notes from the nonatonic collection, which is acceptable because ``the fourth
+  voice is not essential to the voice leading of the cycle.''
+  \headlesscite[15]{santa:2003}.}
+
 %%% Local Variables: %%%
 %%% mode: latex %%%
 %%% TeX-master: "../diss" %%%
