Add some initial text about M3-space.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -188,6 +188,11 @@
   voice is not essential to the voice leading of the cycle.''
   \headlesscite[15]{santa:2003}.}
 
+\fntext{maj3-14}{%
+  The major-thirds figure represents a kind of cross-section of the
+  minor-thirds torus: to see this clearly, locate the key areas C, \Aflat, and
+  E on both Figure \ref{mts:m3-space} and Figure \ref{maj3:maj3-space}.}
+
 %%% Local Variables: %%%
 %%% mode: latex %%%
 %%% TeX-master: "../diss" %%%
