A bit more text on M3-space, justifications.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -193,6 +193,19 @@
   minor-thirds torus: to see this clearly, locate the key areas C, \Aflat, and
   E on both Figure \ref{mts:m3-space} and Figure \ref{maj3:maj3-space}.}
 
+\fntext{maj3-15}{%
+  In fact, the rest of the figure is unnecessary for ``Giant Steps''; the piece
+  is easier to understand using a subgraph of the complete M3-space, that
+  contains only the \tfo progressions in B, G, and \Eflat.}
+
+\fntext{maj3-16}{%
+  These spaces represent all but one of the equal partitions of the octave:
+  while we could easily construct a ``whole-tone space,'' it would not have
+  very many applications to tonal jazz. In cases where a whole-tone space
+  might be useful, it is usually not problematic to consider a whole-tone as a
+  combination of two perfect fifths, which are readily shown in all of the
+  other spaces.}
+
 %%% Local Variables: %%%
 %%% mode: latex %%%
 %%% TeX-master: "../diss" %%%
