Make continued floats work correctly.
This means I can now have figures broken up (Fig. 3.18a, 3.18b, etc.)
and put them on separate pages if I need to, without doing a lot of
funny business in the references or anything.

--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -159,6 +159,8 @@
   justification = raggedright,
   singlelinecheck = false,
 }
+% work continued floats properly
+\renewcommand\theContinuedFloat{\alph{ContinuedFloat}}
 
 
 \usepackage{marginnote}
