Paragraph about network for "Miss Jones" bridge.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -211,6 +211,10 @@
   [note about Rameau]
 }
 
+\fntext{maj3-18}{%
+  [note about bubble notation, citation from GMIT]
+}
+
 %%% Local Variables: %%%
 %%% mode: latex %%%
 %%% TeX-master: "../diss" %%%
