Add paragraph about CS transformation.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -207,11 +207,10 @@
   other spaces.}
 
 \fntext{maj3-17}{%
-  % xxx a note here about Rameau, diminished seventh chords
-  [note about Rameau]
-}
+  \cite[85]{levine:1995}.}
 
 \fntext{maj3-18}{%
+  % xxx note about bubble notation
   [note about bubble notation, citation from GMIT]
 }
 
