--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -263,10 +263,11 @@
 
 % math shortcuts
 \newcommand{\lra}{\longrightarrow}
-\newcommand{\TFarrow}{\ensuremath{\xrightarrow{\mathrm{TF}}}}
-\newcommand{\TFTarrow}{\ensuremath{\xrightarrow{\mathrm{TF}_\mathrm{T}}}}
-\newcommand{\ECarrow}{\ensuremath{\xrightarrow{\mathrm{EC}}}}
-\newcommand{\ECTarrow}{\ensuremath{\xrightarrow{\mathrm{EC}_\mathrm{T}}}}
+\newcommand{\TFarrow}{\ensuremath{\xrightarrow{\mathrm{TF}\,}}}
+\newcommand{\TFTarrow}{\ensuremath{\xrightarrow{\mathrm{TF}_\mathrm{T}\,}}}
+\newcommand{\ECarrow}{\ensuremath{\xrightarrow{\mathrm{EC}\,}}}
+\newcommand{\ECTarrow}{\ensuremath{\xrightarrow{\mathrm{EC}_\mathrm{T}\,}}}
+\newcommand{\CSarrow}{\ensuremath{\xrightarrow{\mathrm{CS}\,}}}
 \newcommand{\intZ}{\ensuremath{\mathbb{Z}}}
 
 \newcommand{\Smin}{\ensuremath{S_{\mathrm{min}}}\xspace}
