Change the "7" in slide7 to a subscript.
I did this because in the next section we'll need the inverse of slide7
a lot, and (slide^7)^-1 looks silly. It's also misleading: it has the
potential to be read as slide^(-7). The seven was never an exponent;
it's just a label to differentiate the seventh-chord slide from the
triadic (Lewinnian) slide, so a subscript makes more sense.

NB! This necessitates a change in all of the graphics which use slide7,
which I haven't done yet.

--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -246,7 +246,7 @@
 \newcommand{\tfmo}{\mbox{ii--V--i}\xspace}
 \newcommand{\tft}{TF\tsub{T}\xspace}
 \newcommand{\tfmt}{tf\tsub{T}\xspace}
-\newcommand{\slideS}{\abbrev{SLIDE}\textsuperscript{7}\xspace}
+\newcommand{\slideS}{\abbrev{SLIDE}\textsubscript{7}\xspace}
 \newcommand{\tsub}{\textsubscript}
 \newcommand{\tsup}{\textsuperscript}
 \newcommand{\rightparen}{)}
