Add section on parsimonious voice-leading.
I may want to include some more here on "uniform" seventh-chord
transformations, but I should talk to Jay first about that.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -214,6 +214,30 @@
   [note about bubble notation, citation from GMIT]
 }
 
+\fntext{pvl-1}{%
+  In addition to including the major seventh chords, this figure corrects some
+  errors in Cohn's version (\citetitle[Fig.~7.16, 158]{cohn:2012}): in his
+  version, the voice leading to and from the French sixth chords is incorrect
+  in two of the three ``towers.''}
+
+\fntext{pvl-2}{%
+  % xxx reread this, check for cross-type
+  This is not terribly surprising; our ordered triples are trichords of set
+  classes (015), (016), and (026). Richard Cohn has
+  shown \parentext{\citetitle{cohn:1997}} that the consonant triad, (037), is
+  unique among trichords in its ability to form parsimonious relationships.
+  Although his work there does not examine parsimonious relationships among
+  members of different set classes, the fact that our three types are not
+  nearly even means that we should not expect to find very many of these
+  relationships.}
+
+\fntext{pvl-3}{%
+  % xxx note about inverse slide7
+  The inverse is needed for \slideS because it was defined as a transformation
+  from a major seventh chord to the minor seventh whose root is a half-step
+  higher. Keeping the \slideS transformation intact in this circumstance would
+  require inverses on both the \textsc{3rd} and \textsc{7th} transformations.}
+
 %%% Local Variables: %%%
 %%% mode: latex %%%
 %%% TeX-master: "../diss" %%%
