Begin work on tune list.
This will need to be done eventually, so I may as well start now.

--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -256,7 +256,7 @@
 \newcommand{\ii}{\mbox{ii\ensuremath{^7}}\xspace}
 \newcommand{\V}{\mbox{V\ensuremath{^7}}\xspace}
 \newcommand{\I}{\mbox{I\ensuremath{^7}}\xspace}
-
+\newcommand{\tuneitem}[1]{\vspace{1em}\noindent#1\vspace{0.5em}}
 
 % uppercase small caps
 \newcommand{\abbrev}[1]{{\abbrevSC #1}}
