Add recordings to tune list for chapters 1-3.

--- a/discog.bib
+++ b/discog.bib
@@ -22,6 +22,37 @@
   year        = {1998},
 }
 
+@music{baker:smokin,
+  author      = {Baker, Chet},
+  title       = {Smokin' with the Chet Baker Quintet},
+  userd       = {Prestige \abbrev{PR} 7449,},
+  origdate    = {1965},
+  series      = {Reissued, Prestige},
+  number      = {9020470372},
+  year        = {2001},
+  type        = {\abbrev{CD}},
+}
+
+@music{blakey:bohemia,
+  author      = {Blakey, Art and {the Jazz Messengers}},
+  title       = {At the Cafe Bohemia, Vol. 1},
+  userd       = {Blue Note \abbrev{BLP} 1507,},
+  origdate    = {1956},
+  series      = {Reissued, Blue Note},
+  number      = {\abbrev{CDP} 7 46521 2},
+  year        = {1987},
+  type        = {\abbrev{CD}},
+}
+
+@music{carter:elegy,
+  author      = {Carter, Benny},
+  title       = {Elegy in Blue},
+  series      = {Musicmasters},
+  number      = {65115},
+  year        = {1994},
+  type        = {\abbrev{CD}},
+}
+
 @music{coleman:amsterdam,
   author      = {Coleman, George},
   title       = {Amsterdam After Dark},
@@ -55,6 +86,15 @@
   year        = {1988},
 }
 
+@music{corea:trilogy,
+  author      = {Corea, Chick},
+  title       = {Trilogy},
+  type        = {\abbrev{CD}},
+  series      = {Concord Jazz},
+  number      = {\abbrev{CJA} 3568502},
+  year        = {2013},
+}
+
 @music{davis:cookin,
   author      = {Davis, Miles},
   title       = {Cookin' with the Miles Davis Quintet},
@@ -64,6 +104,38 @@
   series      = {Reissued, Prestige},
   number      = {61046},
   year        = {2003},
+}
+
+@music{davis:kindofblue,
+  author      = {Davis, Miles},
+  title       = {Kind of Blue},
+  userd       = {Columbia \abbrev{CL} 1355,},
+  origdate    = {1959},
+  series      = {Reissued, Columbia/Legacy},
+  number      = {\abbrev{CJ} 40579},
+  year        = {1992},
+  type        = {\abbrev{CD}},
+}
+
+@music{davis:walkin,
+  author      = {Davis, Miles},
+  nameaddon   = {Miles Davis All Stars},
+  title       = {Walkin'},
+  userd       = {Prestige \abbrev{PRLP} 7076,},
+  origdate    = {1957},
+  series      = {Reissued, Original Jazz Classics},
+  number      = {\abbrev{OJCCD} 213},
+  year        = {1991},
+  type        = {\abbrev{CD}},
+}
+
+@music{defrancesco:live,
+  author      = {DeFrancesco, Joey},
+  title       = {Live: The Authorized Bootleg},
+  series      = {Concord Jazz},
+  number      = {7230123},
+  year        = {2007},
+  type        = {\abbrev{CD}},
 }
 
 @music{evans:heartsings,
@@ -100,26 +172,34 @@
   year        = {2005},
 }
 
-@music{davis:kindofblue,
-  author      = {Davis, Miles},
-  title       = {Kind of Blue},
-  userd       = {Columbia \abbrev{CL} 1355,},
-  origdate    = {1959},
-  series      = {Reissued, Columbia/Legacy},
-  number      = {\abbrev{CJ} 40579},
-  year        = {1992},
+@music{flanagan:giantsteps,
+  author      = {Flanagan, Tommy},
+  title       = {Giant Steps: In Memory of John Coltrane},
+  userd       = {Enja 4022,},
+  origdate    = {1982},
+  series      = {Reissued, Enja},
+  number      = {\abbrev{CD} 4022-41},
+  year        = {1988},
   type        = {\abbrev{CD}},
 }
 
-@music{davis:walkin,
-  author      = {Davis, Miles},
-  nameaddon   = {Miles Davis All Stars},
-  title       = {Walkin'},
-  userd       = {Prestige \abbrev{PRLP} 7076,},
-  origdate    = {1957},
-  series      = {Reissued, Original Jazz Classics},
-  number      = {\abbrev{OJCCD} 213},
-  year        = {1991},
+@music{galper:fantastic,
+  author      = {Galper, Hal},
+  title       = {Trip the Light Fantastic},
+  series      = {Origin},
+  number      = {82602},
+  year        = {2011},
+  type        = {\abbrev{CD}},
+}
+
+@music{gordon:power,
+  author      = {Gordon, Dexter},
+  title       = {More Power!},
+  userd       = {Prestige \abbrev{PR} 7680,},
+  origdate    = {1969},
+  series      = {Reissued, Prestige/Original Jazz Classics},
+  number      = {\abbrev{OJCCD} 815-2},
+  year        = {19894},
   type        = {\abbrev{CD}},
 }
 
@@ -132,6 +212,15 @@
   origdate    = {1958},
   type        = {\abbrev{CD}},
   userd       = {Fantasy 3-257,}
+}
+
+@music{henderson:bigband,
+  author      = {Henderson, Joe},
+  title       = {Big Band},
+  series      = {Verve},
+  number      = {5334512},
+  year        = {1996},
+  type        = {\abbrev{CD}},
 }
 
 @music{henderson:isotope,
@@ -157,6 +246,48 @@
   year        = {2007},
 }
 
+@music{kelly:someday,
+  author      = {Kelly, Wynton},
+  title       = {Someday My Prince Will Come},
+  userd       = {Vee Jay \abbrev{VJS} 3038,},
+  origdate    = {1961},
+  type        = {\abbrev{CD}},
+  series      = {Reissued, Vee Jay},
+  number      = {\abbrev{NVJ}2-902},
+  year        = {1992},
+}
+
+@music{kirk:freekings,
+  author      = {Kirk, \mkbibbrackets{Rahsaan} Roland},
+  title       = {We Free Kings},
+  userd       = {Mercury 20679,},
+  origdate    = {1961},
+  series      = {Reissued, Mercury},
+  number      = {826455-2},
+  year        = {1991},
+  type        = {\abbrev{CD}},
+}
+
+@music{konitz:windows,
+  author      = {Konitz, Lee and Galper, Hal},
+  title       = {Windows},
+  userd       = {Inner City \abbrev{IC} 2057,},
+  origdate    = {1977},
+  series      = {Reissued, Steeplechase},
+  number      = {\abbrev{SCCD} 31057},
+  year        = {1987},
+  type        = {\abbrev{CD}},
+}
+
+@music{metheny:qa,
+  author      = {Metheny, Pat},
+  title       = {Question and Answer},
+  series      = {Geffen},
+  number      = {\abbrev{E}4242932},
+  year        = {1990},
+  type        = {\abbrev{CD}},
+}
+
 @music{morgan:cornbread,
   author      = {Morgan, Lee},
   title       = {Cornbread},
@@ -168,6 +299,75 @@
   year        = {1988},
 }
 
+@music{navarro:fabulous,
+  author      = {Navarro, Fats},
+  title       = {The Fabulous Fats Navarro, Vol. 2},
+  userd       = {Blue Note \abbrev{BLP} 1532,},
+  origdate    = {1956},
+  type        = {\abbrev{CD}},
+  series      = {Reissued, Blue Note},
+  number      = {\abbrev{CDP} 781532 2},
+  year        = {1989},
+}
+
+@music{parker:magnificent,
+  author      = {Parker, Charlie},
+  title       = {The Magnificent Charlie Parker},
+  userd       = {Clef \abbrev{MG C}-646,},
+  origdate    = {1955},
+  series      = {``Blues for Alice'' is available on \textit{Confirmation: Best
+                 of the Verve Years}. Verve},
+  number      = {314 527 815-2},
+  year        = {1995},
+  type        = {\abbrev{CD}},
+}
+
+@music{pass:virtuoso,
+  author      = {Pass, Joe},
+  title       = {Virtuoso},
+  userd       = {Pablo 2310 708,},
+  origdate    = {1974},
+  series      = {Reissued, Original Jazz Classics},
+  number      = {\abbrev{OJCCD} 31990-02},
+  year        = {2010},
+  type        = {\abbrev{CD}},
+}
+
+@music{peterson:reallyplay,
+  author      = {Peterson, Oscar},
+  title       = {The Way I Really Play},
+  userd       = {MPS 15180,},
+  origdate    = {1968},
+  series      = {Reissued, Verve},
+  number      = {B0002233-16},
+  year        = {2003},
+  type        = {\abbrev{CD}},
+}
+
+@music{peterson:requests,
+  author      = {Peterson, Oscar},
+  title       = {We Get Requests},
+  userd       = {Verve \abbrev{V/V6} 8606,},
+  origdate    = {1964},
+  series      = {Reissued, Verve/PolyGram},
+  number      = {5214422},
+  year        = {1997},
+  type        = {\abbrev{CD}},
+}
+
+@music{quintet:massey,
+  author      = {{The Quintet}},
+  nameaddon   = {Charlie Parker, Dizzy Gillespie, Bud Powell, Charlie Mingus, Max Roach},
+  sortauthor  = {Quintet},
+  title       = {Jazz at Massey Hall},
+  userd       = {Debut \abbrev{DEB} 124,},
+  origdate    = {1953},
+  type        = {\abbrev{CD}},
+  series      = {Reissued, Original Jazz Classics},
+  number      = {\abbrev{OJCCD} 044},
+  year        = {1990},
+}
+
 @music{rodney:bird,
   author      = {Rodney, Red},
   title       = {One for Bird},
@@ -175,6 +375,17 @@
   series      = {Steeplechase},
   number      = {\abbrev{SCCD} 31238},
   year        = {1989},
+}
+
+@music{rollins:hawk,
+  author      = {Rollins, Sonny and Hawkins, Coleman},
+  title       = {Sonny Meets Hawk!},
+  userd       = {RCA/Victor \abbrev{LSP}-2712,},
+  origdate    = {1963},
+  series      = {Reissued, RCA/Victor},
+  number      = {09026 63479-2},
+  year        = {1999},
+  type        = {\abbrev{CD}},
 }
 
 @music{shorter:evil,
@@ -188,6 +399,15 @@
   year        = {1987},
 }
 
+@music{tyner:remembering,
+  author      = {Tyner, McCoy},
+  title       = {Remembering John},
+  series      = {Enja},
+  number      = {6080 2},
+  year        = {1991},
+  type        = {\abbrev{CD}},
+}
+
 @music{williams:young,
   author      = {Williams, Tony},
   title       = {Young at Heart},
@@ -195,4 +415,13 @@
   series      = {Columbia},
   number      = {69107},
   year        = {1998},
+}
+
+@music{woods:wigmore,
+  author      = {Woods, Phil and Beck, Gordon},
+  title       = {Live at Wigmore Hall, London: The Complete Concert},
+  series      = {JMS},
+  number      = {186862},
+  year        = {1996},
+  type        = {\abbrev{CD}},
 }
