Add discography rule to Makefile, run bibtool.
I finally wrote the config file for bibtool to format music entries
correctly. Now everything is in the same order and neat.

--- a/discog.bib
+++ b/discog.bib
@@ -1,14 +1,13 @@
-% Discography
 
 @music{ammons:stitt,
   author      = {Ammons, Gene and Stitt, Sonny},
   title       = {Boss Tenors},
   userd       = {Verve \abbrev{V}6 8426,},
   origdate    = {1961},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Verve},
   number      = {837 440-2},
   year        = {1991},
+  type        = {\abbrev{CD}}
 }
 
 @music{baker:quartet,
@@ -16,10 +15,11 @@
   title       = {Cool Baker, Vol. 2},
   userd       = {Pacific Jazz \abbrev{K}18\abbrev{P}-9260,},
   origdate    = {1953},
-  type        = {\abbrev{CD}},
-  series      = {Available on \textit{Chet Baker Quartet Featuring Russ Freeman}. Blue Note},
+  series      = {Available on \textit{Chet Baker Quartet Featuring Russ
+                Freeman}. Blue Note},
   number      = {4931642},
   year        = {1998},
+  type        = {\abbrev{CD}}
 }
 
 @music{baker:smokin,
@@ -30,7 +30,7 @@
   series      = {Reissued, Prestige},
   number      = {9020470372},
   year        = {2001},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{blakey:bohemia,
@@ -41,7 +41,7 @@
   series      = {Reissued, Blue Note},
   number      = {\abbrev{CDP} 7 46521 2},
   year        = {1987},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{carter:elegy,
@@ -50,7 +50,7 @@
   series      = {Musicmasters},
   number      = {65115},
   year        = {1994},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{coleman:amsterdam,
@@ -58,10 +58,10 @@
   title       = {Amsterdam After Dark},
   userd       = {Timeless \abbrev{SJP} 129,},
   origdate    = {1979},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Timeless Jazz Legacy},
   number      = {\abbrev{TJL} 74509},
   year        = {2010},
+  type        = {\abbrev{CD}}
 }
 
 @music{coltrane:giantsteps,
@@ -69,10 +69,10 @@
   title       = {Giant Steps},
   userd       = {Atlantic \abbrev{LP} 1311,},
   origdate    = {1959},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Rhino/Atlantic},
   number      = {8122752032},
   year        = {1998},
+  type        = {\abbrev{CD}}
 }
 
 @music{coltrane:sound,
@@ -80,19 +80,19 @@
   title       = {Coltrane's Sound},
   userd       = {Atlantic \abbrev{LP} 1419,},
   origdate    = {1960},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Rhino/Atlantic},
   number      = {7567813582},
   year        = {1988},
+  type        = {\abbrev{CD}}
 }
 
 @music{corea:trilogy,
   author      = {Corea, Chick},
   title       = {Trilogy},
-  type        = {\abbrev{CD}},
   series      = {Concord Jazz},
   number      = {\abbrev{CJA} 3568502},
   year        = {2013},
+  type        = {\abbrev{CD}}
 }
 
 @music{davis:cookin,
@@ -100,10 +100,10 @@
   title       = {Cookin' with the Miles Davis Quintet},
   userd       = {Prestige 7094,},
   origdate    = {1957},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Prestige},
   number      = {61046},
   year        = {2003},
+  type        = {\abbrev{CD}}
 }
 
 @music{davis:kindofblue,
@@ -114,7 +114,7 @@
   series      = {Reissued, Columbia/Legacy},
   number      = {\abbrev{CJ} 40579},
   year        = {1992},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{davis:walkin,
@@ -126,7 +126,7 @@
   series      = {Reissued, Original Jazz Classics},
   number      = {\abbrev{OJCCD} 213},
   year        = {1991},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{defrancesco:live,
@@ -135,7 +135,7 @@
   series      = {Concord Jazz},
   number      = {7230123},
   year        = {2007},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{evans:heartsings,
@@ -165,11 +165,11 @@
   title       = {Sunday at the Village Vanguard},
   userd       = {Riverside \abbrev{RLP} 376,},
   origdate    = {1961},
-  type        = {\abbrev{CD}},
   series      = {Available on \textit{The Complete Village Vanguard
-                 Recordings 1961}. Riverside},
+                Recordings 1961}. Riverside},
   number      = {4443},
   year        = {2005},
+  type        = {\abbrev{CD}}
 }
 
 @music{flanagan:giantsteps,
@@ -180,7 +180,7 @@
   series      = {Reissued, Enja},
   number      = {\abbrev{CD} 4022-41},
   year        = {1988},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{galper:fantastic,
@@ -189,7 +189,7 @@
   series      = {Origin},
   number      = {82602},
   year        = {2011},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{gordon:power,
@@ -200,18 +200,18 @@
   series      = {Reissued, Prestige/Original Jazz Classics},
   number      = {\abbrev{OJCCD} 815-2},
   year        = {19894},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{guaraldi:flower,
   author      = {Guaraldi, Vince},
   title       = {A Flower is a Lovesome Thing},
+  userd       = {Fantasy 3-257,},
+  origdate    = {1958},
   series      = {Reissued, Original Jazz Classics},
   number      = {\abbrev{OJCCD} 235-2},
   year        = {1995},
-  origdate    = {1958},
-  type        = {\abbrev{CD}},
-  userd       = {Fantasy 3-257,}
+  type        = {\abbrev{CD}}
 }
 
 @music{henderson:bigband,
@@ -220,7 +220,7 @@
   series      = {Verve},
   number      = {5334512},
   year        = {1996},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{henderson:isotope,
@@ -228,10 +228,10 @@
   title       = {Inner Urge},
   userd       = {Blue Note \abbrev{BLP} 4189,},
   origdate    = {1965},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Blue Note},
   number      = {\abbrev{BST} 84189},
   year        = {1985},
+  type        = {\abbrev{CD}}
 }
 
 @music{jamal:pershing,
@@ -239,11 +239,11 @@
   title       = {Jamal at the Pershing, Vol. 2},
   userd       = {Argo \abbrev{LP}-667,},
   origdate    = {1961},
-  type        = {\abbrev{CD}},
   series      = {Available on \textit{Complete Live at the Pershing Lounge
-                 1958}. Gambit},
+                1958}. Gambit},
   number      = {69264},
   year        = {2007},
+  type        = {\abbrev{CD}}
 }
 
 @music{kelly:someday,
@@ -251,10 +251,10 @@
   title       = {Someday My Prince Will Come},
   userd       = {Vee Jay \abbrev{VJS} 3038,},
   origdate    = {1961},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Vee Jay},
   number      = {\abbrev{NVJ}2-902},
   year        = {1992},
+  type        = {\abbrev{CD}}
 }
 
 @music{kirk:freekings,
@@ -265,7 +265,7 @@
   series      = {Reissued, Mercury},
   number      = {826455-2},
   year        = {1991},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{konitz:windows,
@@ -276,7 +276,7 @@
   series      = {Reissued, Steeplechase},
   number      = {\abbrev{SCCD} 31057},
   year        = {1987},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{metheny:qa,
@@ -285,7 +285,7 @@
   series      = {Geffen},
   number      = {\abbrev{E}4242932},
   year        = {1990},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{morgan:cornbread,
@@ -293,10 +293,10 @@
   title       = {Cornbread},
   userd       = {Blue Note \abbrev{BLP} 4222,},
   origdate    = {1965},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Blue Note},
   number      = {\abbrev{BNZ} 109},
   year        = {1988},
+  type        = {\abbrev{CD}}
 }
 
 @music{navarro:fabulous,
@@ -304,10 +304,10 @@
   title       = {The Fabulous Fats Navarro, Vol. 2},
   userd       = {Blue Note \abbrev{BLP} 1532,},
   origdate    = {1956},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Blue Note},
   number      = {\abbrev{CDP} 781532 2},
   year        = {1989},
+  type        = {\abbrev{CD}}
 }
 
 @music{parker:magnificent,
@@ -315,11 +315,11 @@
   title       = {The Magnificent Charlie Parker},
   userd       = {Clef \abbrev{MG C}-646,},
   origdate    = {1955},
-  series      = {``Blues for Alice'' is available on \textit{Confirmation: Best
-                 of the Verve Years}. Verve},
+  series      = {``Blues for Alice'' is available on \textit{Confirmation:
+                Best of the Verve Years}. Verve},
   number      = {314 527 815-2},
   year        = {1995},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{pass:virtuoso,
@@ -330,7 +330,7 @@
   series      = {Reissued, Original Jazz Classics},
   number      = {\abbrev{OJCCD} 31990-02},
   year        = {2010},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{peterson:reallyplay,
@@ -341,7 +341,7 @@
   series      = {Reissued, Verve},
   number      = {B0002233-16},
   year        = {2003},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{peterson:requests,
@@ -352,29 +352,30 @@
   series      = {Reissued, Verve/PolyGram},
   number      = {5214422},
   year        = {1997},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{quintet:massey,
   author      = {{The Quintet}},
-  nameaddon   = {Charlie Parker, Dizzy Gillespie, Bud Powell, Charlie Mingus, Max Roach},
   sortauthor  = {Quintet},
+  nameaddon   = {Charlie Parker, Dizzy Gillespie, Bud Powell, Charlie Mingus,
+                Max Roach},
   title       = {Jazz at Massey Hall},
   userd       = {Debut \abbrev{DEB} 124,},
   origdate    = {1953},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Original Jazz Classics},
   number      = {\abbrev{OJCCD} 044},
   year        = {1990},
+  type        = {\abbrev{CD}}
 }
 
 @music{rodney:bird,
   author      = {Rodney, Red},
   title       = {One for Bird},
-  type        = {\abbrev{CD}},
   series      = {Steeplechase},
   number      = {\abbrev{SCCD} 31238},
   year        = {1989},
+  type        = {\abbrev{CD}}
 }
 
 @music{rollins:hawk,
@@ -385,7 +386,7 @@
   series      = {Reissued, RCA/Victor},
   number      = {09026 63479-2},
   year        = {1999},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{shorter:evil,
@@ -393,10 +394,10 @@
   title       = {Speak No Evil},
   userd       = {Blue Note \abbrev{BLP} 4194,},
   origdate    = {1964},
-  type        = {\abbrev{CD}},
   series      = {Reissued, Blue Note},
   number      = {\abbrev{CDP} 7465092},
   year        = {1987},
+  type        = {\abbrev{CD}}
 }
 
 @music{tyner:remembering,
@@ -405,16 +406,16 @@
   series      = {Enja},
   number      = {6080 2},
   year        = {1991},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
 
 @music{williams:young,
   author      = {Williams, Tony},
   title       = {Young at Heart},
-  type        = {\abbrev{CD}},
   series      = {Columbia},
   number      = {69107},
   year        = {1998},
+  type        = {\abbrev{CD}}
 }
 
 @music{woods:wigmore,
@@ -423,5 +424,5 @@
   series      = {JMS},
   number      = {186862},
   year        = {1996},
-  type        = {\abbrev{CD}},
+  type        = {\abbrev{CD}}
 }
