Text edits for Section 3.1.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -4,7 +4,7 @@
   Turning Figure \ref{mts:m3-torus} into a torus involves gluing the
   top and bottom edges together and the left and right edges together; the
   dotted line representing perfect fifths then wraps around the surface of the
-  torus in a continuous line (as though you had wrapped a barber's pole into a
+  torus in a continuous line (as though you had wrapped a barber's pole around a
   doughnut).}
 
 \fntext{mts-2}{%
@@ -29,30 +29,35 @@
 \fntext{mts-5}{%
   Keith Waters has called this period ``jazz's second practice'' in
   \headlesscite{waters:2013}. Waters, along with J.~Kent Williams, has explored
-  jazz harmony after 1960 using the Tonnetz and hyper-hexatonic systems familiar
+  post-tonal jazz harmony using the Tonnetz and hyper-hexatonic systems familiar
   from classical theory; see \headlesscite{waterswilliams:2010}.}
 
 \fntext{mts-6}{%
-  ``Isotope'' was first recorded on Henderson's album \emph{Inner Urge}, released in
-  1965.\nocite{henderson:isotope}}
+  ``Isotope'' was first recorded on Henderson's album \emph{Inner Urge},
+  released in 1965.\nocite{henderson:isotope} It uses a slightly different set
+  of changes for the solos than it does for the head (often referred to simply
+  as the ``solo changes'' and ``head changes''). This is often the case when
+  the head changes are complex, fast-moving, or contain unusual extensions to
+  account for specific melody notes. These changes are taken from \emph{The
+    Real Book}; the C chord in m.~7 is played as either a major or a dominant
+  seventh on the \emph{Inner Urge} recording, so analyzing it as \h{C7} here
+  seems reasonable.}
 
 \fntext{mts-7}{%
-  ``Isotope'' uses a slightly different set of changes for the solos than it
-  does for the head (often referred to simply as the ``solo changes'' and
-  ``head changes''). This is often the case when the head changes are complex,
-  fast-moving, or contain unusual extensions to account for specific melody
-  notes. These changes are taken from \emph{The Real Book}; the C chord in
-  m.~7 is played as either a major or a dominant seventh on the \emph{Inner Urge}
-  recording, so analyzing it as \h{C7} here seems reasonable.}
+  We could easily define a BD\tsub{blues} transformation, similar to
+  TF\tsub{blues} from the last chapter; for now, we can simply understand this
+  variant as BD $\odot$ \textsc{7th}.}
+
 
 \fntext{mts-8}{%
-  The word ``prolongational'' in this sentence is admittedly problematic. By
-  using it here I mean only that at some deeper level the turnaround is
-  harmonically superfluous, as it occurs after the main tonal conclusion of
-  the chorus (an observation usually confirmed by the fact that the turnaround
-  is omitted in the last head). I do \emph{not} mean to imply that the
-  turnaround in the last two bars of ``Isotope'' is harmonically
-  uninteresting; indeed, it is the most distinctive feature of the piece.}
+  The word ``prolongational'' in this sentence is admittedly problematic,
+  given its Schenkerian implications. By using it here I mean only that at
+  some deeper level the turnaround is harmonically superfluous, as it occurs
+  after the main tonal conclusion of the chorus (an observation confirmed by
+  the fact that the turnaround is usually omitted in the last head). I do
+  not mean to imply that the turnaround in the last two bars of
+  ``Isotope'' is harmonically uninteresting; indeed, it is the most
+  distinctive feature of the piece.}
 
 \fntext{mts-9}{%
   Exactly how far apart \h{Bb7} and \h{C7} depends on how one chooses to
