Text edits for most of Section 3.2.
Still need to do the edits for 3.2.3, but that will wait until tomorrow.

--- a/diss.bib
+++ b/diss.bib
@@ -79,6 +79,19 @@ Theory} }
   year        = {2012}
 }
 
+@article{bribitzerstull:2006,
+  author      = {Bribitzer-Stull, Matthew},
+  title       = {The A\flat--C--E Complex: The Origin and Function of
+                Chromatic Major Third Collections in Nineteenth-Century
+                Music},
+  journal     = {Music Theory Spectrum},
+  volume      = {28},
+  number      = {2},
+  pages       = {167--90},
+  year        = {2006},
+  issue       = {Fall}
+}
+
 @unpublished{buchler:2010,
   author      = {Buchler, Michael},
   title       = {Are There Any Bad (or Good) Transformational Analyses?},
@@ -393,6 +406,7 @@ Theory} }
   journal     = {Oxford Handbooks Online},
   year        = {2014},
   url         = {http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199935321.001.0001/oxfordhb-9780199935321-e-003}
+                
 }
 
 @inproceedings{hook:heptachords,
