--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -84,9 +84,8 @@
 
 % Major-third spaces
 \fntext{maj3-1}{%
-  % xxx need these citations
-  The examples are too numerous to list here, but see, for example, [citations
-  go here].}
+  The examples are too numerous to list here, but for an overview, see
+  \cite{bribitzerstull:2006}.}
 
 \fntext{maj3-2}{%
   Waters's work in particular has focused extensively on this music, though he
@@ -126,23 +125,22 @@
   Nicolas Slonimsky's \emph{Thesaurus of Scales and Melodic Patterns}---as
   well as the music of Thelonious Monk, Dizzy Gillespie, and Tadd Dameron,
   among others. One source that is nearly always cited is the tune ``Have You
-  Met Miss Jones?'' (Richard Rodgers/Lorenz Hart), in which the bridge traces
-  a descending major-third cycle much like that of ``Giant Steps.'' For a
-  review of these possible origins, see \cite[148--57]{demsey:1991}; and
-  \cite[145--47]{porter:1998}.}
+  Met Miss Jones?'' (Richard Rodgers/Lorenz Hart), which we analyze in Section
+  \ref{subsec:miss-jones}. For a review of these possible origins, see
+  \cite[148--57]{demsey:1991}; and \cite[145--47]{porter:1998}.}
 
 \fntext{maj3-6}{%
   Nearly every discussion of Coltrane changes includes the
   ``Countdown''/\,``Tune Up'' pairing. See, for example,
   \cite[159--62]{demsey:1991}; \cite[359--60]{levine:1995}; or many others.
-  ``Countdown'' was also recorded on the album \emph{Giant Steps}, and ``Tune
+  ``Countdown'' was also recorded on \emph{Giant Steps}, and ``Tune
   Up'' can be heard on \emph{Cookin' with the Miles Davis
   Quintet} (1957).\nocite{davis:cookin}}
 
 \fntext{maj3-7}{%
   Demsey provides a list of third-relations in jazz tunes in an appendix to
   \headlesscite[179--80]{demsey:1991}. Coltrane's famous take on ``Body and Soul'' is
-  on the album \emph{Coltrane's Sound} (1960), which also features two original tunes
+  found on the album \emph{Coltrane's Sound} (1960), which also features two original tunes
   that make prominent use of the major-third cycle: ``Central Park West'' and
   ``Satellite.''\nocite{coltrane:sound}}
 
@@ -161,12 +159,13 @@
   following]{cohn:2012}.}
 
 \fntext{maj3-10}{%
-  This figure is taken from Cohn's book, and has a small, but important,
-  error: the `C' at the 10 o'clock position should be a C\sharp, forming a
-  fully-diminished seventh chord. ``4-Cube Trio'' was originally devised by Jack
-  Douthett, and is very similar to the ``Power Towers'' graphic in
-  \cite[256]{douthettsteinbach:1998} (which omits the French sixth chords). For
-  more on its history, see \cite[157n15]{cohn:2012}.}
+  This figure is taken from Cohn's book, and has several errors, the most
+  important of which is that the C at the 10 o'clock position should be a
+  C\sharp, forming a fully-diminished seventh chord. ``4-Cube Trio'' was
+  originally devised by Jack Douthett, and is very similar to the ``Power
+  Towers'' graphic in \cite[256]{douthettsteinbach:1998} (which omits the
+  French sixth chords). For more on its history, see
+  \cite[157n15]{cohn:2012}.}
 
 \fntext{maj3-11}{%
   This is a central thesis of Cohn's chapter 7 \parentext{see especially
@@ -174,6 +173,8 @@
   geometric theory \parentext{\headlesscite[97--112]{tymoczko:2011}}.}
 
 \fntext{maj3-12}{%
+  % This footnote isn't referenced in the text any more, but I want to keep it
+  % around here just in case
   My intent here is not to fault these approaches for failing to explain jazz
   harmony, only to demonstrate why they are not sufficient for our purposes
   here. These theories were designed primarily for music of the nineteenth
@@ -189,9 +190,9 @@
   cardinalities of the chords the same, but he does not mention why he chooses
   not to use major seventh chords and complete dominant sevenths, for example.
   Santa notes later that including the fifth involves one of the three missing
-  notes from the nonatonic collection, which is acceptable because ``the fourth
-  voice is not essential to the voice leading of the cycle.''
-  \headlesscite[15]{santa:2003}.}
+  notes from the nonatonic collection, which is acceptable because ``the
+  fourth voice is not essential to the voice leading of the
+  cycle'' \parentext{\cite[15]{santa:2003}}.}
 
 \fntext{maj3-14}{%
   The major-thirds figure represents a kind of cross-section of the
@@ -200,16 +201,16 @@
 
 \fntext{maj3-15}{%
   In fact, the rest of the figure is unnecessary for ``Giant Steps''; the piece
-  is easier to understand using a subgraph of the complete M3-space, that
+  is easier to understand using a subgraph of the complete M3-space that
   contains only the \tfo progressions in B, G, and \Eflat.}
 
 \fntext{maj3-16}{%
   These spaces represent all but one of the equal partitions of the octave:
   while we could easily construct a ``whole-tone space,'' it would not have
-  very many applications to tonal jazz. In cases where a whole-tone space
-  might be useful, it is usually not problematic to consider a whole tone as a
-  combination of two perfect fifths, which are readily shown in all of the
-  other spaces.}
+  very many applications to tonal jazz. In cases where whole-tone
+  relationships seem important, it is usually not problematic to consider a
+  whole tone as a combination of two perfect fifths, which are readily shown
+  in all of the other spaces.}
 
 \fntext{maj3-17}{%
   \cite[85]{levine:1995}.}
